Update eslint file

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,9 +31,9 @@
       }
     ],
     "react/react-in-jsx-scope": "off",
+    "import/no-extraneous-dependencies": "off",
     "import/no-unresolved": "off",
     "no-shadow": "off",
-    "import/no-extraneous-dependencies": "off"
   },
   "ignorePatterns": [
     "dist/",
