Update eslint file

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,7 +33,7 @@
     "react/react-in-jsx-scope": "off",
     "import/no-extraneous-dependencies": "off",
     "import/no-unresolved": "off",
-    "no-shadow": "off",
+    "no-shadow": "off"
   },
   "ignorePatterns": [
     "dist/",
